--- a/SeleniumCombineFramework/test-output/old/Default suite/classes.html
+++ b/SeleniumCombineFramework/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>FunctionTest.FT_Opportunities_02_Test</td>
+<td>FunctionTest.FT_Organizations_01_Test</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>FT_Opportunities</td>
+<td>FT_TestOrganization</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
