--- a/SeleniumCombineFramework/test-output/old/Default suite/methods.html
+++ b/SeleniumCombineFramework/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60f79e">  <td>23/08/22 11:42:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closingTheBrowser()[pri:0, instance:FunctionTest.FT_Opportunities_02_Test@7205765b]">&lt;&lt;closingTheBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
-<tr bgcolor="60f79e">  <td>23/08/22 11:41:54</td>   <td>-28242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.navigatingtoApplication()[pri:0, instance:FunctionTest.FT_Opportunities_02_Test@7205765b]">&gt;&gt;navigatingtoApplication</td> 
-<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
-<tr bgcolor="60f79e">  <td>23/08/22 11:42:17</td>   <td>-5913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.signOutFromApplication()[pri:0, instance:FunctionTest.FT_Opportunities_02_Test@7205765b]">&lt;&lt;signOutFromApplication</td> 
-<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
-<tr bgcolor="b0c791">  <td>23/08/22 11:42:05</td>   <td>-17188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FT_Opportunities_02_Test.FT_Opportunities()[pri:0, instance:FunctionTest.FT_Opportunities_02_Test@7205765b]">FT_Opportunities</td> 
-  <td>main@910599202</td>   <td></td> </tr>
-<tr bgcolor="60f79e">  <td>23/08/22 11:41:46</td>   <td>-36095</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.launchingBrowser()[pri:0, instance:FunctionTest.FT_Opportunities_02_Test@7205765b]">&gt;&gt;launchingBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="7b6572">  <td>23/08/30 12:27:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.navigatingtoApplication()[pri:0, instance:FunctionTest.FT_Organizations_01_Test@1da2cb77]">&gt;&gt;navigatingtoApplication</td> 
+<td>&nbsp;</td>  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="7b6572">  <td>23/08/30 12:27:47</td>   <td>15494</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.signOutFromApplication()[pri:0, instance:FunctionTest.FT_Organizations_01_Test@1da2cb77]">&lt;&lt;signOutFromApplication</td> 
+<td>&nbsp;</td>  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="d09a64">  <td>23/08/30 12:27:40</td>   <td>8504</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FT_Organizations_01_Test.FT_TestOrganization()[pri:0, instance:FunctionTest.FT_Organizations_01_Test@1da2cb77]">FT_TestOrganization</td> 
+  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="7b6572">  <td>23/08/30 12:27:49</td>   <td>17411</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closingTheBrowser()[pri:0, instance:FunctionTest.FT_Organizations_01_Test@1da2cb77]">&lt;&lt;closingTheBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1187903677</td>   <td></td> </tr>
+<tr bgcolor="7b6572">  <td>23/08/30 12:27:26</td>   <td>-5683</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.launchingBrowser()[pri:0, instance:FunctionTest.FT_Organizations_01_Test@1da2cb77]">&gt;&gt;launchingBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1187903677</td>   <td></td> </tr>
 </table>
